--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
+        "js-cookie": "^3.0.1",
         "view-ui-plus": "^1.3.1",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
