--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.21",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.2.6",
         "vite": "^4.0.0"
     },
     "dependencies": {
@@ -20,6 +22,9 @@
         "view-ui-plus": "^1.3.1",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.1",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "@headlessui/vue": "^1.5.0",
+        "vue3-perfect-scrollbar": "^1.6.0",
+        "vuex": "^4.0.2"
     }
 }
